# streamlit-state

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/streamlit_state/: __init__.py
tests/: __init__.py  test_state.py
